<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Decisions</string>
    <string name="newquestion">What is your question?</string>
    <string name="newdecisions">Enter your decisions below, and add them with the button. To finish, press the
        checkmark above</string>
    <string name="editquestion">Enter question here</string>
    <string name="editdecisions">Enter a new decision here</string>
    <string name="hello_world">Hello world!</string>
    <string name="add">Add</string>
    <string name="decide">Decide</string>
    <string name="undo">Undo</string>
    <string name="emptystring"></string>
    <string name="taptoremove">Tap to remove a decision below!</string>
    <string name="pressdecide">Press decide below!</string>
    <string name="decisionslist">Decisions List:</string>
    <string name="longclick">What would you like to do?</string>
    <string name="deleteconfirm">Are you sure you want to delete this?</string>
    <string name="removeconfirm">Are you sure you want to remove this decision?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="longeditdecisions">Edit Decision</string>
    <string name="longdeletedecisions">Delete Decision</string>
    <string name="action_settings">Settings</string>
    <string name="notfound">No questions found, please press the add button above to create a new question</string>
    <string name="title_activity_new_question">New Question</string>
    <string name="title_activity_decision">Decisions</string>
    <string name="title_activity_edit_decision">Edit Decision</string>
    <string name="title_activity_backup_settings">Backup/Restore</string>
    <string name="backuptext">This will backup all of your decisions to your external SD card (Internal on some devices),
         Under the Path "Decisions/DecisionsSave.ser". This will fail if no external path is found.</string>
    <string name="backup">Backup</string>
    <string name="restoretext">This will restore all of your decisions from your external SD card (Internal on some devices),
         Under the Path "Decisions/DecisionsSave.ser". This will fail if the path to the file is not found.</string>
    <string name="restore">Restore</string>
    <string name="backuprestore">Backup/Restore</string>
    <string name="coinflip">Coin Flip</string>
    <string name="guessnumber">Guess A Number</string>
    <string name="title_activity_coin_flip">Coin Flip</string>
    <string name="flipthecoin">Flip The Coin!</string>
    <string name="pressflip">Press flip below!</string>
    <string name="flip">Flip</string>
    <string name="title_activity_guess_number">Guess A Number</string>
    <string name="numberbetween">Guess A Number Between...</string>
    <string name="one">1</string>
    <string name="ten">10</string>
    <string name="and">and</string>
    <string name="buy5">Buy Five</string>
    <string name="buy10">Buy Ten</string>
    <string name="buyinfinite">Buy Infinite</string>
     <string name="fivedecisions">Support the developer, and get five additional decisions for $.99!</string>
    <string name="tendecisions">Support the developer, and get ten additional decisions for $1.99!</string>
    <string name="infinitedecisions">Support the developer, and remove decisions restrictions for $3.99!</string>
    <string name="title_activity_iap">Get More Decisions</string>
    <string name="getmoredecisions">Get More Decisions</string>
    <string name="warning">Each decision increase can only be purchased once for restoring purposes. 
        If you have already made a purchase, press restore below to restore your purchase(s)!</string>
    <string name="purchased">Purchased</string>

</resources>
