<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context="com.torch2424.decisions.Start" >
    
     <TextView
            android:id="@+id/warning"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/warning"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_marginBottom="10dp" />
     
     <Button
        android:id="@+id/restoreButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="restorePurchases"
        android:text="@string/restore"
        android:layout_marginBottom="10dp" />
    
    <TextView
            android:id="@+id/fivedecisions"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/fivedecisions"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_marginBottom="10dp" />

    <Button
        android:id="@+id/fiveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="buy"
        android:text="@string/buy5"
        android:layout_marginBottom="10dp" />
    
    <TextView
            android:id="@+id/tendecisions"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/tendecisions"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_marginBottom="10dp" />
    
    <Button
        android:id="@+id/tenButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="buy"
        android:text="@string/buy10"
        android:layout_marginBottom="10dp" />
    
     <TextView
            android:id="@+id/infinitedecisions"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/infinitedecisions"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_marginBottom="10dp" />
    
    <Button
        android:id="@+id/infiniteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="buy"
        android:text="@string/buyinfinite" />

</LinearLayout>

</ScrollView>

