<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.torch2424.decisions.Decision"
    android:orientation="vertical"
    android:gravity="center" >

    <TextView
        android:id="@+id/questionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textSize="25sp"
        android:gravity="center"
        android:text="@string/numberbetween" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        
        <EditText 
            android:id="@+id/minnumber"
             android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:inputType="number"
        	android:layout_marginRight="5dp"
        	android:text="@string/one"/>
        
         <TextView
        android:id="@+id/and"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:text="@string/and" />
        
        <EditText 
            android:id="@+id/maxnumber"
             android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:inputType="number"
        	 android:layout_marginLeft="5dp"
        	android:hint="@string/ten"/>
        
    </LinearLayout>
    
    <TextView
        android:id="@+id/answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textSize="20sp"
        android:gravity="center"
        android:text="@string/pressdecide" />
    
    <Button
        android:id="@+id/decideButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="decide"
        android:layout_marginBottom="10dp"
        android:text="@string/decide" />

</LinearLayout>
