<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.torch2424.decisions.Start" >
    
    <EditText
            android:id="@+id/questionedit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:hint="@string/editquestion" 
            android:textSize="25sp" />
    
    <EditText
        android:id="@+id/addtext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_gravity="center_horizontal"
        android:hint="@string/editdecisions" 
        />
     
     <Button
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="addDecision"
        android:layout_gravity="center_horizontal"
        android:text="@string/add" />
    
     <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/taptoremove"
            android:textSize="16sp" />
     
     

    <ListView
        android:id="@+id/listView"
        android:animateLayoutChanges="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
        

</LinearLayout>
