<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.torch2424.decisions.Decision"
    android:orientation="vertical"
    android:gravity="center" >

    <TextView
        android:id="@+id/questionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:textSize="25sp"
        android:text="@string/flipthecoin" />
    
    <TextView
        android:id="@+id/answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/pressflip" />
    
    <Button
        android:id="@+id/decideButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="flip"
        android:layout_marginBottom="10dp"
        android:text="@string/flip" />

</LinearLayout>